# roll_bot

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
deploy/: README.md  grafana-dashboard.json
deploy/ansible/: requirements.yml  site.yml
deploy/ansible/roles/firewall/tasks/: main.yml
deploy/ansible/roles/roll_bot/defaults/: main.yml
deploy/ansible/roles/roll_bot/tasks/: main.yml
deploy/ansible/roles/roll_bot/templates/: roll_bot.service.j2
deploy/terraform/: datasources.tf  main.tf  network.tf  outputs.tf  provider.tf  schema.yaml  security-lists.tf  variables.tf
src/: cache.rs  collection.rs  commands.rs  db.rs  db_ejdb.rs  fetch.rs  fetcher.rs  format.rs  main.rs  metrics.rs  telegram.bak.rs  telegram.rs  util.rs
src/format/: abbreviation.rs  db.rs  item.rs  mod.rs  monster.rs  roll.rs  spell.rs  telegram.rs  utils.rs
src/jx9/: insert.jx9  search.jx9
test_data/: roll_bot.db  roll_bot.db_item  roll_bot.db_item.idx.iname.lex  roll_bot.db_item.idx.nname.dec  roll_bot.db_monster.idx.iname.lex  roll_bot.db_monster.idx.nname.dec  roll_bot.db_spell  roll_bot.db_spell.idx.iname.lex  roll_bot.db_spell.idx.nname.dec  roll_bot.ejdb  roll_bot.ejdb__log  roll_bot.ejdb__log.idx.nuser_id.dec  roll_bot.ejdb_baseitem  roll_bot.ejdb_baseitem.idx.iname.lex  roll_bot.ejdb_item  roll_bot.ejdb_item.idx.iname.lex  roll_bot.ejdb_itemGroup  roll_bot.ejdb_itemGroup.idx.iname.lex  roll_bot.ejdb_itemProperty  roll_bot.ejdb_itemProperty.idx.iname.lex  roll_bot.ejdb_itemProperty.idx.sabbreviation.lex  roll_bot.ejdb_itemType  roll_bot.ejdb_itemType.idx.iname.lex  roll_bot.ejdb_itemType.idx.sabbreviation.lex  roll_bot.ejdb_itemTypeAdditionalEntries  roll_bot.ejdb_itemTypeAdditionalEntries.idx.sappliesTo.lex  roll_bot.ejdb_legendaryGroup  roll_bot.ejdb_legendaryGroup.idx.iname.lex  roll_bot.ejdb_monster.idx.iname.lex  roll_bot.ejdb_spell  roll_bot.ejdb_spell.idx.iname.lex
