[package]
authors = ["Sergei Gureev <bemyak@pm.me>"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
name    = "roll_bot"
version = "1.0.0"

[profile.release]
lto   = "fat"
panic = 'abort'

[dependencies]
comfy-table = "7.0.1"
ejdb = { git = "https://github.com/bemyak/ejdb.rs.git", branch = "master" }
futures = { version = "0.3.27", default-features = false }
hyper = { version = "0.14.25", default-features = false, features = ["server"] }
hyper-proxy = { version = "0.9.1", default-features = false, features = ["rustls"] }
hyper-rustls = "0.24.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
log = { version = "0.4.17", default-features = false }
ordinal = "0.3.2"
peg = "0.8.1"
percent-encoding = "2.2.0"
prometheus = { version = "= 0.13.2", default-features = false, features = ["process"] }
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.158"
serde_json = { version = "1.0.94", default-features = false }
simplelog = { version = "0.12.1", default-features = false }
simsearch = "0.2.4"
teloxide = { version = "0.12.2", default-features = false, features = [
	"rustls",
	"ctrlc_handler",
	"auto-send",
	"cache-me",
	"throttle",
] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.12"
zalgo = "0.2.0"
itertools = "0.11.0"

[dev-dependencies]
simplelog  = { version = "0.12.1", default-features = false, features = ["test"] }
tokio-test = "0.4.2"

[build-dependencies]
schemafy_lib = "0.6.0"

[features]
regenerate_types = []
trace            = ["peg/trace"]
